--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,14 @@
 [package]
 name = "berkletree"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ark-poly-commit = "0.3.0"
-ark-ec = "0.3.0"
-ark-bls12-381 = "0.3.0"
-ark-poly = "0.3.0"
-ark-serialize = "0.3.0"
+kzg = { version = "0.1.1", features = ['std'] }
 blake3 = "1.0"
+bls12_381 = "0.5.0"
 serde = "1"
 bitvec = "0.22.3"
 
