--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-kzg = { version = "0.1.1", features = ['std'] }
+kzg = { version = "0.1.5", features = ['std'] }
 blake3 = "1.0"
 bls12_381 = "0.5.0"
 serde = "1"
 bitvec = "0.22.3"
+bytes = "1.1.0"
+thiserror = "1.0.26"
 
 [dev-dependencies]
 fastrand = "1.5.0"
